--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-xl-1 col-sm-3  d-flex align-items-center" id="user" style="max-width: 100px;">
                     <img src="user.jpg" alt="user">
-                    <a href="#" class="user-hover">Nam Vinh</a>
+                    <a href="#" class="user-hover">Mai Anh</a>
                 </div>
                 <div >
                  <div class="menu-header" style="position: absolute; z-index: 9999;"  >
