--- a/index.html
+++ b/index.html
@@ -945,7 +945,8 @@
             </div>
         </div>
     </div>
-    <div class="footer" style="background-color: #f2f2f2; padding-bottom: 70px; padding-top: 67px;">
+    <div class="footer" style="background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), url(https://images.pexels.com/photos/1261728/pexels-photo-1261728.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+    background-position: center;background-size: cover; padding-bottom: 70px; padding-top: 67px;">
         <div class="container-1">
             <div class="row no-gutters">
                 <div class="col-md-7" style="max-width: 720px; padding-top: 50px;background-image: url(https://scontent.fhan5-5.fna.fbcdn.net/v/t1.15752-9/69241837_682836302143530_6621633878622732288_n.jpg?_nc_cat=108&_nc_oc=AQmVr4wcXhUsYIRdsw2LnEG_pZsigjWb4FrW7slAKwcorGg9eVNGkvHJFF0ejDg780iZk32dsKm95kjbvRSemCyr&_nc_ht=scontent.fhan5-5.fna&oh=cffdcc01cfd3c1753c9227c55858d4c5&oe=5DD4A9CF);">
